--- a/index.html
+++ b/index.html
@@ -5,17 +5,17 @@
 </head>
 <body>
     <h3>Please check the console for output.</h3>
-    <script src="src/User.js" charset="utf-8"></script>
+    <script src="classes/User.js" charset="utf-8"></script>
     <script src="src/price-calculator.js"></script>
     <script>
         var calculatedPrice = 0;
-        var user = new User('company');
+        var anton = new User('company');
         var productType = 0;
         var price = 100;
         var publishedDate = new Date();
 
         try {
-            calculatedPrice = calculatePrice(user, productType, price, publishedDate);
+            calculatedPrice = calculatePrice(anton, productType, price, publishedDate);
         } catch (ex) {
             console.log(ex);
         }
