Add 7 test to check 2 Objects and calculation

--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
     <!-- <script src="src/price-calculator.js"></script> -->
     <script>
         var anton = new User('normal');
-        var iphone = new Product(100, 'new');
+        var iphone = new Product(333, 'old');
 
         var jesper = new User('company');
         var ipad = new Product(200, 'old');
@@ -29,7 +29,7 @@
         console.log('Calculated price:', calculatedPriceIphone);
 
         console.log('---------------------------------------------');
-        
+
         console.log('Ipad:');
         console.log('Calculated price:', calculatedPriceIpad);
     </script>
