--- a/spec/runner.html
+++ b/spec/runner.html
@@ -8,8 +8,9 @@
 	<div id="mocha"></div>
 	<script src="libs/expect.js"></script>
 	<script src="libs/mocha.js"></script>
-	
-	<script src="../src/price-calculator.js"></script>
+
+	<script src="../src/User.js"></script>
+	<script src="../src/Product.js"></script>
 
 	<script>mocha.setup('bdd')</script>
 	<script src="price-calculator.specs.js"></script>
