--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
     <!-- <script src="src/price-calculator.js"></script> -->
     <script>
         var anton = new User('normal');
-        var iphone = new Product(333, 'old');
+        var iphone = new Product(333, 'new');
 
         var jesper = new User('company');
         var ipad = new Product(200, 'old');
